# groote-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  FINAL_VERIFICATION.md  MIGRATION.md  Makefile  OAuth-plan.md  PLAN.md  README.md  SETUP.md  docker-compose.cli.yml  docker-compose.yml  jiggly-wiggling-hopcroft.md  lively-munching-pearl.md  make.ps1  plan.md  pyproject.toml  todo.txt
.claude/: AGENTS.md  CLAUDE.md  settings.json  settings.local.json
.claude/agents/: brain.md  code-review-expert.md  debugger.md  implementer.md  planner.md  reviewer.md  service-specialist.md
.claude/rules/: microservices.md
.github/workflows/: ci.yml  frontend.yml  rust.yml
.playwright-cli/: page-2026-02-08T15-25-03-977Z.yml  page-2026-02-08T15-25-38-927Z.yml  page-2026-02-08T15-25-57-755Z.yml  page-2026-02-08T15-26-23-624Z.yml  page-2026-02-08T16-24-31-530Z.yml  page-2026-02-08T16-24-39-182Z.yml  page-2026-02-08T16-24-43-232Z.yml  page-2026-02-08T16-24-47-180Z.yml  page-2026-02-08T16-24-50-927Z.yml  page-2026-02-08T19-02-34-695Z.yml
admin-setup/: CLAUDE.md  Dockerfile  README.md  SETUP.md  requirements.txt
admin-setup/docs/: ARCHITECTURE.md  features.md  flows.md
admin-setup/frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
admin-setup/src/: config.py  db.py  encryption.py  main.py  models.py  routes.py  service.py  validators.py
agent-engine/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.agent.yml  main.py  requirements.txt  worker.py
agent-engine/.claude/: CLAUDE.md  mcp.json
agent-engine/.cursor/: mcp.json
agent-engine/cli/: __init__.py  base.py  event_collector.py  factory.py  sanitization.py
agent-engine/config/: settings.py
agent-engine/docs/: ARCHITECTURE.md  features.md  flows.md
agent-engine/scripts/: db.py  docker-start.sh  extract_oauth_creds.sh  heartbeat.py  log_cli_status.py  setup_repos.sh  start-with-oauth.sh  start.py  test_cli.py
agent-engine/services/: __init__.py  conversation_bridge.py  dashboard_client.py  github_responder.py  jira_responder.py  knowledge.py  loop_tracking.py  output_validation.py  redis_ops.py  response_poster.py  response_publisher.py  slack_notifier.py  slack_responder.py  task_routing.py
agent-engine/tests/: conftest.py  test_cli_agent_system.py  test_cli_provider_selection.py  test_conversation_bridge.py  test_knowledge_service.py  test_response_publisher.py  test_session_management.py  test_task_lifecycle.py  test_task_routing.py  test_task_routing_enriched.py
api-gateway/: .env.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  main.py  requirements.txt
api-gateway/config/: settings.py
api-gateway/docs/: ARCHITECTURE.md  features.md  flows.md
api-gateway/middleware/: __init__.py  error_handler.py
api-gateway/routes/: __init__.py  webhooks.py
api-gateway/services/: __init__.py  event_publisher.py  loop_prevention.py  oauth_config.py  slack_notifier.py
api-gateway/tests/: conftest.py  test_event_publishing.py  test_github_webhooks.py  test_immediate_responses.py  test_jira_webhooks.py  test_loop_prevention.py  test_sentry_webhooks.py  test_slack_webhooks.py  test_webhook_flow.py
api-gateway/webhooks/: __init__.py
api-services/: CLAUDE.md  README.md  SETUP.md  docker-compose.services.yml
api-services/docs/: ARCHITECTURE.md  features.md  flows.md
api-services/github-api/: .env.example  CLAUDE.md  Dockerfile  README.md  requirements.txt  token_provider.py
api-services/jira-api/: .env.example  CLAUDE.md  Dockerfile  README.md  main.py  token_provider.py
api-services/sentry-api/: .env.example  Dockerfile  README.md  main.py
api-services/slack-api/: .env.example  CLAUDE.md  Dockerfile  README.md  (+2 more)
dashboard-api/: .env.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  main.py  requirements.txt
docs/: ARCHITECTURE.md  ENV-VARIABLE-MAPPING.md  INTEGRATION-IMPLEMENTATION-PLAN.md  KNOWLEDGE-LAYER.md  KNOWLEDGE-SYSTEM-ARCHITECTURE.md  SETUP-KNOWLEDGE.md  SYNC_REPORT.md  SYSTEM-ARCHITECTURE.md  TDD-IMPLEMENTATION-PLAN.md  TUNNEL_SETUP.md  features.md  flows.md  task-log-analysis-2026-02-14.md  webhook-integration-guide.md
external-dashboard/: .env.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  test_output.txt  test_output_2.txt  vite.config.ts
gkg-service/: .env.example  CLAUDE.md  Dockerfile  README.md  config.py  entrypoint.sh  factory.py  gkg_wrapper.py  main.py  models.py  requirements.txt
indexer-worker/: .env.example  CLAUDE.md  Dockerfile  README.md  config.py  models.py  requirements.txt  token_provider.py  worker.py
knowledge-graph/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh
knowledge-graph/docs/: ARCHITECTURE.md  features.md  flows.md
knowledge-graph/scripts/: sync-repos.sh
knowledge-graph/src/: main.rs
knowledge-graph/src/api/: handlers.rs
knowledge-graph/src/models/: edge.rs  mod.rs  node.rs  query.rs
knowledge-graph/src/services/: graph.rs
llamaindex-service/: .env.example  CLAUDE.md  Dockerfile  README.md  chroma_client.py  config.py  factory.py  main.py  models.py  query_engine.py  requirements.txt
mcp-servers/: CLAUDE.md  README.md  SETUP.md  docker-compose.mcp.yml
oauth-service/: .env.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  main.py  models.py  pyproject.toml  requirements.txt
oauth-service/api/: __init__.py  internal_routes.py  routes.py  server.py
oauth-service/config/: credential_loader.py  settings.py
oauth-service/docs/: ARCHITECTURE.md  features.md  flows.md
oauth-service/providers/: __init__.py  base.py  github.py  jira.py  slack.py
oauth-service/services/: __init__.py  installation_service.py  token_service.py  webhook_service.py
oauth-service/tests/: test_oauth_flows.py  test_token_service.py  test_webhook_service.py
task-logger/: .env.example  CLAUDE.md  Dockerfile  README.md  config.py  event_handlers.py  example_publish.py  logger.py  main.py  models.py  requirements.txt  worker.py
(+468 files in other folders)
