[project]
name = "groote-ai"
version = "1.0.0"
description = "Groote AI - Production system for autonomous code management"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "httpx>=0.26.0,<1.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "structlog>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api-gateway", "agent-engine", "dashboard-api", "task-logger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "agent-engine/tests",
    "api-gateway/tests",
    "dashboard-api/tests",
    "task-logger/tests",
    "api-services/github-api/tests",
    "api-services/jira-api/tests",
    "api-services/slack-api/tests",
    "api-services/sentry-api/tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = [
    "agent-engine",
    "api-gateway",
    "dashboard-api",
    "task-logger",
    "api-services",
]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
exclude = [
    "external-dashboard",
    "knowledge-graph",
    "node_modules",
    ".venv",
    "tests",
    "scripts",
    ".*/config/.*",
]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "structlog.*",
    "uvicorn.*",
    "httpx.*",
    "pydantic.*",
    "pydantic_settings.*",
    "fastapi.*",
    "pytest.*",
    "pytest_asyncio.*",
    "sqlalchemy.*",
    "aiohttp.*",
    "anthropic.*",
    "openai.*",
    "jwt.*",
    "jira.*",
    "slack_sdk.*",
    "sentry_sdk.*",
    "yaml.*",
    "chromadb.*",
    "llama_index.*",
    "qdrant_client.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "node_modules",
    "external-dashboard",
    "knowledge-graph",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches (complex functions are acceptable)
    "PLR0915", # too many statements (complex functions are acceptable)
    "B008",    # function call in argument defaults (FastAPI Depends pattern)
    "PLC0415", # import not at top-level (common in dynamic imports)
    "PLW0603", # using global statement (acceptable for singleton patterns)
    "PLW0602", # global without assignment (for shutdown flags)
    "PLW1510", # subprocess.run without check (handled explicitly)
    "B904",    # raise from err (not always needed)
    "PTH",     # pathlib vs os.path (both acceptable)
    "PLW2901", # loop variable overwritten (common pattern)
    "SIM102",  # nested if statements (sometimes more readable)
    "SIM105",  # contextlib.suppress (try-except-pass is fine)
    "RUF006",  # asyncio.create_task reference (background tasks don't need it)
    "RUF012",  # mutable class attributes (acceptable in tests)
    "ERA001",  # commented-out code (documentation comments are fine)
    "ARG002",  # unused method argument (interface compliance)
]

[tool.ruff.lint.isort]
known-first-party = [
    "agent_engine",
    "api_gateway",
    "dashboard_api",
    "task_logger",
    "oauth_service",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG", "PLR2004", "PLR0915", "PLR0912"]
"**/__init__.py" = ["F401"]
"**/main.py" = ["ARG001"]  # FastAPI lifespan needs app arg
"**/routes/**" = ["ARG001", "ARG002"]  # FastAPI routes may not use all args
"**/services/**" = ["ARG002"]  # Service methods may have unused args for interface compliance
"**/cli/providers/**" = ["ARG002", "PLR0915", "PLR0912"]  # CLI providers have complex methods
"**/scripts/**" = ["ARG001"]  # Scripts may have unused args for signal handlers
"**/webhooks/**" = ["ARG001", "ARG002"]  # Webhook handlers may have unused args
"**/api/server.py" = ["ARG001"]  # FastAPI lifespan needs app arg
"**/server.py" = ["ARG001"]  # FastAPI lifespan needs app arg

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
